# LazyBrother

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEVPLAN.md  GEMINI.md  README.md  RELEASE_NOTES.md  backtest_run.py  pyproject.toml  start.sh
.agent/skills/archive-task/: SKILL.md
.agent/skills/new-task/: SKILL.md
.agent/skills/new-task/references/: devplan-templates.md
.agent/skills/project-release/: SKILL.md
app/: __init__.py  config.py  main.py
app/backtest/: __init__.py  data_loader.py  evaluator.py  runner.py  signal_generator.py  simulator.py
app/models/: prompt.py  request.py  response.py  snapshot.py
app/pipeline/: data_fetcher.py  indicator_calc.py  llm_synthesizer.py  orchestrator.py  pattern_analyzer.py  smc_analyzer.py
app/providers/: base.py  claude_provider.py  gemini_provider.py  openai_provider.py
app/routers/: analysis.py  prompts.py  snapshots.py
app/storage/: prompt_store.py  snapshot_store.py
data/: prompts.json  snapshots.json
docs/: spec.md
docs/archive/vue3-debug-frontend/: walkthrough.md
docs/plans/: 2026-02-15-lazybrother-design.md
frontend/: index.html  vite.config.js
frontend/src/: App.vue  api.js  style.css
frontend/src/components/: AnalysisForm.vue  ErrorDisplay.vue  PromptManager.vue  RawJson.vue  ResultPanel.vue
specs/: add-real-price-on-debug-client.md  add-symbol-selection-system-walkthrough.md  add-symbol-selection-system.md  backtest-system-walkthrough.md  configurable-port-walkthrough.md  prompt-management-walkthrough.md
